<resources>
    <string name="app_name">打分系统</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="App_Name">打分系统</string>
    <string name="empty_data">暂无数据</string>
    <string name="empty_score">暂无分数</string>
    <string name="init_score">0.0</string>
    <string name="load_data">加载数据中...</string>
    <string name="details_tips">A:仪表形象得分\nB:表达能力得分\nC:工作态度得分\nD:岗位能力得分\nE:综合素质得分</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="date_symbol">日期:</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="determine">确定</string>
    <string name="forget_password">忘记秘密？</string>
    <string name="register">注册账号</string>
    <string name="login">登录</string>


    <!--info-->
    <string name="input_info">录入基本信息</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_age">年龄</string>
    <string name="user_group">组别</string>
    <string name="user_post">岗位</string>
    <string name="user_department">部门</string>

    <!--mark-->
    <string name="mark_tips">点击星星进行打分</string>

    <string name="performance_appraisal">绩效考核</string>
    <string name="title_activity_pa__marking">PA_MarkingActivity</string>

</resources>
