<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/input_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divide"
        android:background="@color/ColorBlack1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/include_name_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="3"
            android:background="@drawable/input_text_frame"
            android:hint="@string/user_name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/include_sex_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="2"
            android:maxLength="1"
            android:focusable="false"
            android:foreground="?selectableItemBackground"
            android:background="@drawable/input_text_frame"
            android:hint="@string/user_sex"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/include_age_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="number"
            android:maxLength="2"

            android:background="@drawable/input_text_frame"
            android:hint="@string/user_age"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/include_post_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            android:background="@drawable/input_text_frame"
            android:clickable="true"
            android:gravity="center|left"
            android:hint="@string/user_post"
            android:tag="0"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/include_department_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/input_text_frame"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:focusable="false"
            android:gravity="center|left"
            android:hint="@string/user_department"
            android:tag="0"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="right"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/date_symbol"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/include_date_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="false"
            android:padding="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>